[package]
name = "vapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
derive_builder = "0.11.2"
fast_vk = { path = "../fast_vk" }
futures = "0.3.23"
getset = "0.1.2"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1", features = ["rt", "net", "macros", "rt-multi-thread", "sync"] }
