[package]
name = "vapper"
version = "0.1.0"
edition = "2021"
description = "Nice wrapper for fast_vk"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_vk = "0.3"
ijson = "0.1.3"
serde = "1.0"
serde_json = "1.0"
vk_method = "0.2"
